fixes a bug with the font on mobile devices (#5)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* fixes a bug with the font on mobile phones */
+body {
+  @apply tracking-tighter sm:tracking-normal;
+}
